<resources>
    <string name="a_baidu_edit_location_hint_please_input_latlng">Please enter latitude and longitude</string>
    <string name="a_baidu_edit_location_title">Edit Location</string>
    <string name="a_baidu_select_location_hint_permission">Please grant the app \"Location\" permission</string>
    <string name="a_baidu_select_location_hint_permission_usage_stats">Please grant the program Usage Access Permissions</string>
    <string name="a_baidu_select_location_hint_please_select_location">Please click on the map to select the location</string>
    <string name="a_baidu_select_location_hint_select_location">Click on the map to select the location</string>
    <string name="a_baidu_select_location_search_hint">Search or enter latitude and longitude</string>
    <string name="a_baidu_select_location_title">Select Location</string>
    <string name="a_baidu_select_route_hint_continue_select_route">Drag the map to continue planning the route</string>
    <string name="a_baidu_select_route_hint_please_select_route">Please drag the map and location icon to plan the route</string>
    <string name="a_baidu_select_route_hint_select_route">Drag the map and location icon to freely plan the route</string>
    <string name="a_baidu_select_route_search_et_end_title">End point</string>
    <string name="a_baidu_select_route_search_et_start_title">Search start point</string>
    <string name="a_baidu_select_route_search_rb_tripmode_1">Walk</string>
    <string name="a_baidu_select_route_search_rb_tripmode_2">Bike</string>
    <string name="a_baidu_select_route_search_rb_tripmode_3">Driving</string>
    <string name="a_diy_package_sign_user">Use an account signature</string>
    <string name="a_diy_package_title">Custom Package</string>
    <string name="a_edit_location_et_address_title">Address</string>
    <string name="a_edit_location_et_altitude">Altitude</string>
    <string name="a_edit_location_et_latitude">Latitude</string>
    <string name="a_edit_location_et_longitude">Longitude</string>
    <string name="a_edit_location_et_name_title">Name</string>
    <string name="a_hint_init_nonetwork">Network initialization operation is required for first use, please reopen the software after connecting to the network.</string>
    <string name="a_login_btn_finish">OK</string>
    <string name="a_login_btn_forgetpwd">Forget password ?</string>
    <string name="a_login_btn_next_1">Next</string>
    <string name="a_login_btn_next_2">Next</string>
    <string name="a_login_btn_requestcode">"Didn't receive the verify code?"</string>
    <string name="a_login_btn_switch">E-Mail</string>
    <string name="a_login_email_btn_switch">Phone number</string>
    <string name="a_login_email_hint">Please use your email to log in.</string>
    <string name="a_login_email_hint_vercode">Verification code sent to your email, please note that check.</string>
    <string name="a_login_et_email">E-Mail</string>
    <string name="a_login_et_phone">Enter phone number</string>
    <string name="a_login_et_vercode">Verification code</string>
    <string name="a_login_finish_title">Welcome</string>
    <string name="a_login_hint">Please use your phone number to log in.</string>
    <string name="a_login_hint_request_permissions">Please grant \"Phone\" permission to verify your device.</string>
    <string name="a_login_hint_vercode">SMS verification code sent to your phone, please note that check.</string>
    <string name="a_login_login_faild">Login information is invalid, please try again.</string>
    <string name="a_login_til_email_pwd_hint">Password</string>
    <string name="a_login_til_email_setpwd_hint">Set Password</string>
    <string name="a_login_title">LOGIN</string>
    <string name="a_login_title_input_vercode">Enter verification code</string>
    <string name="a_login_tv_area_code_hint">Country code</string>
    <string name="a_login_tv_hint_email_pwd_hint">Please enter your account password</string>
    <string name="a_login_tv_terms">I have read and agree to the<b> </b></string>
    <string name="a_login_tv_terms_and"><b> </b>and<b> </b></string>
    <string name="a_login_tv_terms_privacypolicy"><u>Privacy Policy</u></string>
    <string name="a_login_tv_terms_termsofuse"><u>Terms of Use</u></string>
    <string name="a_settings_category_about">ABOUT</string>
    <string name="a_settings_category_debug">DEBUG</string>
    <string name="a_settings_category_debug_item_clearenv">Cleanup Runtime Environment</string>
    <string name="a_settings_category_debug_item_clearenv_hint">If there is a running exception after upgrading the version, try to clean up the running environment. It is recommended to restart the phone before doing this.</string>
    <string name="a_settings_category_debug_item_run_log">Logcat</string>
    <string name="a_settings_category_debug_item_run_log_hint">Capture the run log, which can be sent to the developer through the feedback channel to solve your usage problems. Turn this option off after feedback, otherwise the application will continue to capture the device log and take up a lot of storage space.</string>
    <string name="a_settings_category_debug_item_xposed_mode">Xposed Compatibility</string>
    <string name="a_settings_category_debug_item_xposed_mode_hint">In the installation of the Xposed framework, it is recommended to enable this option to avoid the conflict restart problem</string>
    <string name="a_settings_category_general_default_map">Default Map</string>
    <string name="a_settings_category_general_history_size">History Size</string>
    <string name="a_settings_category_general_history_size_hint">Support up to 200 history records</string>
    <string name="a_settings_category_general_sysread_time_hint">The time between system startup and complete readiness</string>
    <string name="a_settings_category_general_sysready_wait_time">System ready time (milliseconds)</string>
    <string name="a_settings_category_mock">MOCK LOCATION</string>
    <string name="a_settings_category_mock_cell">MOCK CELLS</string>
    <string name="a_settings_category_mock_steps">MOCK STEPS</string>
    <string name="a_settings_category_other">OTHER</string>
    <string name="a_settings_category_other_data_exprot">Data Export</string>
    <string name="a_settings_category_other_data_exprot_hint">Export data to local, can be used for data backup, migration, sharing</string>
    <string name="a_settings_category_other_data_import">Data Import</string>
    <string name="a_settings_category_other_data_import_hint">Import backed up data or data migrated from other devices into this program</string>
    <string name="a_settings_category_other_item_bootads_hint">Professional users can choose to close the Boot Ads, improve the start-up speed of the program</string>
    <string name="a_settings_category_other_item_bootads_title">Boot Ads</string>
    <string name="a_settings_category_support_abis_item_x86_summary">With this component enabled, ROOT mode can be used on x86 platforms (such as PC android emulators)</string>
    <string name="a_settings_category_support_abis_item_x86_title">X86 ABIS</string>
    <string name="a_settings_item_contact_title">Contact Developer</string>
    <string name="a_settings_item_mock_allow_search_gps_summary">Allows searching for GPS signals when Mock Location and Mock Route in NOROOT mode. Note: If the device is successfully located by GPS, it may jump back to the real position; therefore it is not recommended to enable it outdoors.</string>
    <string name="a_settings_item_mock_allow_search_gps_title">Allow GPS Search (NOROOT)</string>
    <string name="a_settings_item_mock_cell_mock_siminfo_summary">In the case of Mocking the Cells, the SIM card information can be mock at the same time, so that the APP can normally read the mock cells and SIM state on the device without inserting the SIM card</string>
    <string name="a_settings_item_mock_cell_mock_siminfo_title">Mock SIM (ROOT)</string>
    <string name="a_settings_item_mock_gps_accuracy">Mock GPS Accuracy (meters)</string>
    <string name="a_settings_item_mock_gps_float_summary">Enable latitude and longitude coordinate drift within the set GPS accuracy range.</string>
    <string name="a_settings_item_mock_gps_float_title">Mock GPS Drift</string>
    <string name="a_settings_item_mock_gps_status_summary">Enable Mock GPS Signal while Mock Location and Mock Route, can be used for APP that requires GPS signal to work properly</string>
    <string name="a_settings_item_mock_gps_status_title">Mock GPS Signal (ROOT)</string>
    <string name="a_settings_item_mock_steps_day_reset_summary">Daily automatic reset Step Counter, counting from 0</string>
    <string name="a_settings_item_mock_steps_day_reset_title">Step Counter Daily Cleared</string>
    <string name="a_settings_item_refresh_rate_title">Location update frequency (ms/once)</string>
    <string name="a_settings_item_version_title">Version</string>
    <string name="d_address_export_content_title_address">Location</string>
    <string name="d_address_export_content_title_extras">Extra Info</string>
    <string name="d_address_export_content_title_extras_cells">Cells</string>
    <string name="d_address_export_content_title_extras_wifis">WIFI</string>
    <string name="d_location_capture_et_name">"Name: "</string>
    <string name="d_location_capture_tv_cell">Capture Cells</string>
    <string name="d_location_capture_tv_gps">Capture GPS</string>
    <string name="d_location_capture_tv_wifi">Capture WIFI</string>
    <string name="d_location_capture_use_hint">"* Tip: Before starting to capture the location, please make sure that the device's positioning function (High-Precision mode) and WIFI are turned on"</string>
    <string name="d_resubmitorder_et_hint_ordenumber">Please enter order number</string>
    <string name="d_resubmitorder_et_hint_ordercode">Please enter order code</string>
    <string name="d_resubmitorder_et_title_ordercode">Order Code:</string>
    <string name="d_resubmitorder_et_title_ordernumber">Order Number:</string>
    <string name="d_set_stepcounter_et_name">Set steps</string>
    <string name="d_set_stepcounter_tv_syscounter_nostepcounter">No Sensor</string>
    <string name="d_set_stepcounter_tv_syscounter_title">Step Counter:</string>
    <string name="d_settings_repeat_timeout_unit">s</string>
    <string name="d_settings_repeat_tv_timeout_title">Repeat Interval</string>
    <string name="d_settings_repeat_tv_title">Repeat Count</string>
    <string name="d_settings_repeat_unit">COUNT</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_alone">Mock Targeted</string>
    <string name="drawer_menu_discuss">Discussion</string>
    <string name="drawer_menu_fakeloc">Mock Location</string>
    <string name="drawer_menu_faq">FAQ</string>
    <string name="drawer_menu_feedback">Feedback</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_moreapps">More Apps</string>
    <string name="drawer_menu_precaution">Precaution</string>
    <string name="drawer_menu_privacy_policy">Privacy Policy</string>
    <string name="drawer_menu_rate">Rate</string>
    <string name="drawer_menu_recommend">Developer Recommend</string>
    <string name="drawer_menu_report">Report</string>
    <string name="drawer_menu_route">Mock Route</string>
    <string name="drawer_menu_run_mode">Run Mode</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_share">Share</string>
    <string name="drawer_menu_termsofuse">Terms of use</string>
    <string name="drawer_menu_wifi">Mock WIFI</string>
    <string name="f_fakeloc_tv_current_latlong_title">Lat-Lng:</string>
    <string name="m_item_filter_list_all">All</string>
    <string name="m_item_filter_list_system">System Apps</string>
    <string name="m_item_filter_list_user">User Apps</string>
    <string name="pc_support_abis">Multi-Platform</string>
</resources>