<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorAccent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/d_resubmitorder_et_title_ordercode" />
    <EditText android:textSize="14.0sp" android:id="@id/d_forget_deviceid_tv_deviceid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/d_resubmitorder_et_hint_ordercode" android:inputType="textEmailAddress" />
    <TextView android:textColor="@color/colorAccent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/d_resubmitorder_et_title_ordernumber" />
    <EditText android:textSize="14.0sp" android:id="@id/d_forget_deviceid_tv_ordernum" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/d_resubmitorder_et_hint_ordenumber" android:digits="\ 1234567890" android:inputType="number" />
</LinearLayout>