<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/dp10" android:paddingTop="@dimen/dp8" android:paddingRight="@dimen/dp10" android:paddingBottom="@dimen/dp8" android:layout_width="240.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <carbon.widget.LinearLayout android:orientation="horizontal" android:paddingBottom="@dimen/dp4" android:layout_width="fill_parent" android:layout_height="wrap_content" app:carbon_rippleColor="@color/colorPrimary">
        <TextView android:textSize="@dimen/dp14" android:textStyle="bold" android:textColor="@color/font_color_focused" android:id="@id/d_settings_repeat_tv_count_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/d_settings_repeat_tv_title" />
        <EditText android:textSize="@dimen/dp14" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center|right" android:id="@id/d_settings_repeat_et_value" android:background="@null" android:paddingRight="@dimen/dp8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2" android:hint="              " android:singleLine="true" android:maxLength="5" android:digits="\ 1234567890" android:layout_weight="1.0" android:inputType="number" android:imeOptions="actionDone" />
        <TextView android:textSize="@dimen/dp14" android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/d_settings_repeat_unit" />
    </carbon.widget.LinearLayout>
    <carbon.widget.LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/dp4" android:paddingBottom="@dimen/dp4" android:layout_width="fill_parent" android:layout_height="wrap_content" app:carbon_rippleColor="@color/colorPrimary">
        <TextView android:textSize="@dimen/dp14" android:textStyle="bold" android:textColor="@color/font_color_focused" android:id="@id/d_settings_repeat_tv_timeout_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/d_settings_repeat_tv_timeout_title" />
        <EditText android:textSize="@dimen/dp14" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="bottom|center|right" android:id="@id/d_settings_repeat_et_timeout_value" android:background="@null" android:paddingRight="@dimen/dp8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:hint="              " android:singleLine="true" android:maxLength="50" android:digits="\ 1234567890" android:layout_weight="1.0" android:inputType="number" android:imeOptions="actionDone" />
        <TextView android:textSize="@dimen/dp14" android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/d_settings_repeat_timeout_unit" />
    </carbon.widget.LinearLayout>
</LinearLayout>